update first version

--- a/index.html
+++ b/index.html
@@ -8,24 +8,38 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <div class="title">
+        <h1>Mobile Tab Bar Micro Interaction</h1>
+        <div>
+            Learn how to : <a title="Web dev coding" alt="Web dev coding" target="_blank" href="https://www.youtube.com/watch?v=b4qizW_CTqQ">Web dev coding</a>
+        </div>
+    </div>
     <nav class="menu" id="menu">
+        <a class="menu__item">
+            <img title="Menu" alt="Menu" src="assets/menu.svg"/>
+        </a>
+        <a class="menu__item">
+            <img title="Menu" alt="Menu" src="assets/list.svg"/>
+        </a>
+        <a class="menu__item">
+            <img title="Menu" alt="Menu" src="assets/clock.svg"/>
+        </a>
+        <a class="menu__item">
+            <img title="Menu" alt="Menu" src="assets/bar-chart.svg"/>
+        </a>
+        <a class="menu__item">
+            <img title="Menu" alt="Menu" src="assets/settings.svg"/>
+        </a>
         <div class="menu__shadow" id="menu__shadow">
-            <div class="menu__shadow-mask"></div>
-        </div>
-        <div class="menu__item">
-            <img title="Menu" alt="Menu" src="assets/menu.svg"/>
-        </div>
-        <div class="menu__item">
-            <img title="Menu" alt="Menu" src="assets/menu.svg"/>
-        </div>
-        <div class="menu__item">
-            <img title="Menu" alt="Menu" src="assets/menu.svg"/>
-        </div>
-        <div class="menu__item">
-            <img title="Menu" alt="Menu" src="assets/menu.svg"/>
-        </div>
-        <div class="menu__item">
-            <img title="Menu" alt="Menu" src="assets/menu.svg"/>
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 550.000000 300.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,300.000000) scale(0.100000,-0.100000)" fill="#18B274" stroke="none">
+                <path d="M10 2495 l0 -504 553 -3 552 -3 76 -36 c202 -97 309 -333 309 -684 0
+                -347 129 -661 369 -899 179 -179 390 -290 656 -347 79 -17 371 -17 450 0 401
+                86 713 320 890 667 78 152 135 369 135 513 0 117 19 297 41 391 48 207 148
+                331 308 381 59 18 96 19 602 19 l539 0 0 505 0 505 -2740 0 -2740 0 0 -505z"></path>
+                </g>
+            </svg>
+            <img class="menu__shadow-icon" src="assets/menu.svg">
         </div>
     </nav>
 </body>
